--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=TaskManagement
-spring.datasource.url=jdbc:postgresql://localhost:5432/TaskDatabase
+spring.datasource.url=jdbc:postgresql://localhost:5432/TaskDatabaseSec
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
